# trader

./: .env.example  .gitignore  pyproject.toml  run_backtest.py  train_and_test.py
config/: instruments.toml  settings.toml
data/models/: 10yr_mgc.pkl  10yr_mnq.pkl  blind_test_mgc.pkl  blind_test_mnq.pkl  btc_final_stats_0.pkl  btc_final_stats_1.pkl  btc_final_stats_10.pkl  btc_final_stats_11.pkl  btc_final_stats_14.pkl  btc_final_stats_15.pkl  btc_final_stats_16.pkl  btc_final_stats_17.pkl  btc_final_stats_2.pkl  btc_final_stats_3.pkl  btc_final_stats_4.pkl  btc_final_stats_5.pkl  btc_final_stats_6.pkl  btc_final_stats_7.pkl  btc_final_stats_8.pkl  btc_final_stats_9.pkl  btc_stats_0.pkl  btc_stats_1.pkl  btc_stats_10.pkl  btc_stats_11.pkl  btc_stats_12.pkl  btc_stats_13.pkl  btc_stats_14.pkl  btc_stats_15.pkl  btc_stats_16.pkl  btc_stats_17.pkl  btc_stats_2.pkl  btc_stats_3.pkl  btc_stats_4.pkl  btc_stats_5.pkl  btc_stats_6.pkl  btc_stats_7.pkl  btc_stats_8.pkl  btc_stats_9.pkl  mnq_analysis.pkl  mnq_audit.pkl  (+51 more)
scripts/: fetch_databento.py  full_pipeline.py  launch_live.sh  run_btc_exit_variants.py  run_btc_final.py  run_btc_london_variants.py  run_btc_vwap_timeframes.py  run_btc_walkforward.py  run_mgc_hybrid.py
src/: config.py
src/ai/: ev_model.py  exit_model.py  features.py  meta_model.py  model.py  quality_model.py  strategy_bank.py  strategy_stats.py  trainer.py  triple_barrier.py
src/backtest/: engine.py  engine_ai.py  engine_btc.py  engine_stats.py  engine_v2.py  multi_instrument.py  walk_forward.py
src/data/: client.py  loader.py
src/risk/: engine.py
(+243 files in other folders)
