[project]
name = "quant-bot"
version = "0.1.0"
description = "Regime-switching intraday hybrid bot for funded futures accounts"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "httpx>=0.27",
    "signalrcore>=0.9",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyarrow>=15.0",
    "loguru>=0.7",
    "ta>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
